--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
 {% set version = "1.1" %}
-
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -9,47 +8,44 @@ package:
 
 source:
   url:
-    - https://cran.r-project.org/src/contrib/EMT_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/EMT/EMT_{{ version }}.tar.gz
-
+    - {{ cran_mirror }}/src/contrib/EMT_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/EMT/EMT_{{ version }}.tar.gz
   sha256: f0d6669f5d6f22569849fe7293e917fe25c8261261b9fc6d87e332397ad86a54
 
 build:
-  noarch: generic
+  merge_build_host: True  # [win]
   number: 1003
-
+  noarch: generic
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
+    - {{ posix }}zip               # [win]
+    - cross-r-base {{ r_base }}    # [build_platform != target_platform]
+  host:
     - r-base
-
   run:
     - r-base
 
 test:
   commands:
-    - $R -e "library('EMT')"  # [not win]
+    - $R -e "library('EMT')"           # [not win]
     - "\"%R%\" -e \"library('EMT')\""  # [win]
 
 about:
   home: https://CRAN.R-project.org/package=EMT
-  license: GPL
+  license: GPL-2.0-or-later
   summary: The package provides functions to carry out a Goodness-of-fit test for discrete multivariate data. It is tested if a given observation is likely to have occurred under the assumption of an ab-initio model. A p-value can be calculated using different distance measures between observed and expected frequencies.
     A Monte Carlo method is provided to make the package capable of solving high-dimensional problems.
   license_family: GPL
   license_file:
     - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
+
 extra:
   recipe-maintainers:
     - conda-forge/r
     - MathiasHaudgaard
     - FrodePedersen
     - ArneKr
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - dpryan79
